44
================

26/02/21 Include expires on vaccinations wordkey
25/02/21 Last movement and last fosterer keys for querybuilder #271
25/02/21 Person last movement #271
24/02/21 Stop fosterers being placed into the owner field
19/02/21 Squash nulls when exporting as CSV
14/02/21 Separate transport time wordkeys
12/02/21 Show records created from online form as form/user #768
12/02/21 Prevent forms having GDPR out of sync with exclude #737
12/02/21 Avoid unnecessary audits updating adopter flag #958
12/02/21 Form validation on adoptables for old iOS devices
08/02/21 Support for current vet in CSV import/export
05/02/21 Include vacc and microchip stats on annual figures
05/02/21 output for Yes/No additional fields in query builder
02/02/21 utils.atoi strips leading 0, breaks phone comparison
02/02/21 Calendar view list/links don't work #961
01/02/21 Online form developer view without caching #960
27/01/21 Suggested linked emails when sending from animal/media
26/01/21 (depleted) stock level option to view 0 balances #637
26/01/21 Update Hebrew translation, rtl css (Saggi Neuemann)
25/01/21 csvimport: person should not be mandatory for 4,6,7
24/01/21 autocomplete attributes for username/passwords
24/01/21 document_repository service method to allow links to docs
24/01/21 Try to prevent browser autofill on email addresses
22/01/21 Preview incoming forms in a new page on mobile #932
22/01/21 Indicate adoptable status in mobile interface #27
22/01/21 Show a returning column on foster/retailer book
21/01/21 Support importing of animal logs #524
21/01/21 Fix focus bugs in TinyMCE 5 #938
21/01/21 Move owner req euth to Death, enable for non-shelter
19/01/21 Never overwrite RabiesTag with a blank
19/01/21 Add DisplayXIf* fields for PetPlan/form overlays
19/01/21 Online forms: support multiple ANDed showIf rules
19/01/21 Online forms: Yes/No defaults to blank so user must choose
19/01/21 Fix mail merge recipient list to cope with NULL